Increase touch slop when entering/leaving VR

VR input devices behave like laser pointers, leading to movements with
lower precision as opposed to a mouse or a touchpad, due to natural
shakiness of users. This change increases the slop when on VR browsing,
as a factor of the platform's slop.

Bug: 860321
Change-Id: I47906921ab41e69b7bc4e427ebbd327ae8f7d9bf
Reviewed-on: https://chromium-review.googlesource.com/1134088
Commit-Queue: Aldo Culquicondor <acondor@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574957}
Former-commit-id: 5aa63e066731a6df12bf27d727fd912cdfd083cf