ui/events/gesture_detection/filtered_gesture_provider.cc
@@ -18,10 +18,16 @@ FilteredGestureProvider::FilteredGestureProvider(
     const GestureProvider::Config& config,
     GestureProviderClient* client)
     : client_(client),
-      gesture_provider_(config, this),
+      gesture_provider_(std::make_unique<GestureProvider>(config, this)),
       gesture_filter_(this),
       handling_event_(false),
-      any_touch_moved_beyond_slop_region_(false) {
+      any_touch_moved_beyond_slop_region_(false) {}
+
+FilteredGestureProvider::~FilteredGestureProvider() = default;
+
+void FilteredGestureProvider::UpdateConfig(
+    const GestureProvider::Config& config) {
+  gesture_provider_ = std::make_unique<ui::GestureProvider>(config, this);
 }
 
 FilteredGestureProvider::TouchHandlingResult
@@ -34,7 +40,7 @@ FilteredGestureProvider::OnTouchEvent(const MotionEvent& event) {
   if (event.GetAction() == MotionEvent::Action::DOWN)
     any_touch_moved_beyond_slop_region_ = false;
 
-  if (!gesture_provider_.OnTouchEvent(event))
+  if (!gesture_provider_->OnTouchEvent(event))
     return TouchHandlingResult();
 
   TouchDispositionGestureFilter::PacketResult filter_result =
@@ -59,25 +65,25 @@ void FilteredGestureProvider::OnTouchEventAck(
 }
 
 void FilteredGestureProvider::ResetDetection() {
-  gesture_provider_.ResetDetection();
+  gesture_provider_->ResetDetection();
 }
 
 void FilteredGestureProvider::SetMultiTouchZoomSupportEnabled(
     bool enabled) {
-  gesture_provider_.SetMultiTouchZoomSupportEnabled(enabled);
+  gesture_provider_->SetMultiTouchZoomSupportEnabled(enabled);
 }
 
 void FilteredGestureProvider::SetDoubleTapSupportForPlatformEnabled(
     bool enabled) {
-  gesture_provider_.SetDoubleTapSupportForPlatformEnabled(enabled);
+  gesture_provider_->SetDoubleTapSupportForPlatformEnabled(enabled);
 }
 
 void FilteredGestureProvider::SetDoubleTapSupportForPageEnabled(bool enabled) {
-  gesture_provider_.SetDoubleTapSupportForPageEnabled(enabled);
+  gesture_provider_->SetDoubleTapSupportForPageEnabled(enabled);
 }
 
 const ui::MotionEvent* FilteredGestureProvider::GetCurrentDownEvent() const {
-  return gesture_provider_.current_down_event();
+  return gesture_provider_->current_down_event();
 }
 
 void FilteredGestureProvider::OnGestureEvent(const GestureEventData& event) {
