ui/events/gesture_detection/gesture_provider_config_helper.h
@@ -14,9 +14,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 namespace ui {
 
 enum class GestureProviderConfigType {
-  CURRENT_PLATFORM,  // Parameters tailored for the current platform.
-  GENERIC_DESKTOP,   // Parameters typical for a desktop machine.
-  GENERIC_MOBILE     // Parameters typical for a mobile device (phone/tablet).
+  CURRENT_PLATFORM,     // Parameters tailored for the current platform.
+  CURRENT_PLATFORM_VR,  // Parameters tailored for the current platform in VR.
+  GENERIC_DESKTOP,      // Parameters typical for a desktop machine.
+  GENERIC_MOBILE  // Parameters typical for a mobile device (phone/tablet).
 };
 
 GESTURE_DETECTION_EXPORT GestureProvider::Config GetGestureProviderConfig(
